--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,61 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+*{
+  padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  color: #1c1e21;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
-
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
+#loginContainer{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 350px;
+  /* height:520px; */
+  border: 1px solid red;
+  padding: 10px 20px;
+  border: 1px solid rgb(219, 219, 219);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 5px;
 }
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
+#loginLogo{
+  width: 50%;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.inputField{
+  margin: 3px 0;
+  width: 100%;
+  padding: 8px 12px;
+  border: 1px solid #dbdbdb;
+  background-color: #fafafa;
+  outline: none;
+  font-size: 13px;
+  border-radius: 3px;
 }
-
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sbtn{
+  border: 1px solid #4bb4f8;
+  background-color: #4bb4f8;
+  border-radius: 6px;
+  width: 100%;
+  color: white;
+  padding: 5px 1px;
+  font-weight: bold;
+  font-size: 14px;
+  /* letter-spacing: 1px; */
+  cursor: pointer;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.row{
+  display: flex;
 }
-
-.card {
-  padding: 2em;
+.lineSeperator{
+  width: 100%;
+  height: 2px;
+  background-color: rgb(182, 180, 180);
+  margin: 0 5px;
 }
-
-.read-the-docs {
-  color: #888;
+.alignCenter{
+  align-items: center;
 }
