--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,9 @@
   color: #1c1e21;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+body{
+  background-color: #1b1d20;
+}
 #loginContainer{
   position: absolute;
   top: 50%;
@@ -58,4 +61,44 @@
 }
 .alignCenter{
   align-items: center;
+}
+nav{
+  position: absolute;
+  left: 0;
+  border-right: 1px solid rgba(128, 128, 128, 0.123);
+  width: 370px;
+  height: 100%;
+  padding: 15px 30px;
+  color: silver;
+  display: flex;
+  flex-direction: column;
+}
+nav ul li {
+  margin: 0px 0 25px 0;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+nav ul li p{
+  color: silver;
+  font-size: 20px;
+
+}
+.navLogo{
+  width: 150px;
+  height: 100px;
+  background: url(/src/assets/img/logo.png);
+  background-position: center;
+  background-size: contain;
+  filter: brightness(0) invert(1);
+  background-repeat: no-repeat;
+}
+.navIcons{
+  width: 30px;
+  height: 25px;
+  margin-right: 12px;
+  filter: brightness(0) invert(1);
+  /* border: 1px solid red; */
+
 }
