--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,12 @@
   padding: 0;
   box-sizing: border-box;
   margin: 0;
-  color: #1c1e21;
+  color: silver;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 body{
   background-color: #1b1d20;
+  color: silver;
 }
 #loginContainer{
   position: absolute;
@@ -15,7 +16,6 @@ body{
   transform: translate(-50%,-50%);
   width: 350px;
   /* height:520px; */
-  border: 1px solid red;
   padding: 10px 20px;
   border: 1px solid rgb(219, 219, 219);
   display: flex;
@@ -92,6 +92,7 @@ nav ul li p{
   background-size: contain;
   filter: brightness(0) invert(1);
   background-repeat: no-repeat;
+  
 }
 .navIcons{
   width: 30px;
@@ -99,10 +100,52 @@ nav ul li p{
   margin-right: 12px;
   filter: brightness(0) invert(1);
 }
+#container{
+  width: calc(100% - 370px );  
+  height: 100vh;
+  margin: 0 0 0 auto;
+  padding: 15px 5px;
+  display: flex;
+  justify-content: center;
+}
+.postContainer{
+  width: 720px;
+}
+#searchContainer{
+  width: 100%;
+  border: 2px solid rgba(128, 128, 128, 0.123);
+  background-color: transparent;border-radius: 6px;
+  display: flex;
+
+}
+.searchInpt{
+  padding: 8px 12px;
+  background-color: transparent;
+  outline: none;
+  border: none;
+  width: calc(100% - 30px);
+  transition: 0.5s;
+}
+#search{
+  width: 30px;
+  height: 32px;
+  margin-left: auto;
+  background: url(/src/assets/img/Search.png);
+  background-position: center;
+  background-size: 80%;
+  background-repeat: no-repeat;
+  filter: brightness(0) invert(1);
+  color: silver;
+
+}
 @media only screen and (max-width:1920px) {
   nav{
     width: 270px;
   }
+  #container{
+    width: calc(100% - 270px );  
+  }
+
 }
 @media only screen and (max-width:1262px) {
   nav{
@@ -123,6 +166,14 @@ nav ul li p{
   }
   .navIcons{
     margin-right: 0;
+  }
+  #container{
+    width: calc(100% - 80px );  
+  }
+}
+@media only screen and (max-width:884px) {
+  .postContainer{
+    width: 100%;
   }
 }
 @media only screen and (max-width:760px) {
@@ -155,5 +206,10 @@ nav ul li p{
     height: 100%;
     margin-right: 15px ;
     /* border: 1px solid red; */
+  }
+  #container{
+    width: 95%;
+    height: calc(100vh - 50px);
+    margin: 0 auto;
   }
 }
