--- a/src/App.css
+++ b/src/App.css
@@ -232,11 +232,38 @@ nav ul li p{
   margin-right: 10px;
   border: 1px solid blue;
 }
+#msgBody{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+}
 #msgHeader{
   padding: 5px 12px;
-width: 100%;
-height: 60px;
-border-bottom: 1px solid rgba(128, 128, 128, 0.123);
+  width: 100%;
+  height: 60px;
+  border-bottom: 1px solid rgba(128, 128, 128, 0.123);
+}
+#userMessages{
+  width: 100%;
+  height: 92%;
+}
+.userMsg{
+  margin: 10px 0;
+  max-width: 50%;
+  min-width: min-content;
+  padding: 3px 12px;
+}
+.myMsg{
+  background-color: #5f5f5f;
+  color: black;
+  border-radius: 1px 5px 5px 1px;
+}
+.toMsg{
+  background-color: #cfd1d1;
+  margin-left: auto;
+  color: black;
+  border-radius: 5px 1px 1px 5px;
+  text-align: end;
 }
 @media only screen and (max-width:1920px) {
   nav{
@@ -245,7 +272,6 @@ border-bottom: 1px solid rgba(128, 128, 128, 0.123);
   #container{
     width: calc(100% - 270px );  
   }
-
 }
 @media only screen and (max-width:1262px) {
   nav{
