--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,27 @@
   color: silver;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
+::-webkit-scrollbar{
+  width: 8px;
+  border-radius: 999px;
+
+}
+/* Track */
+::-webkit-scrollbar-track {
+  background: transparent;
+  border-radius: 5px; 
+  max-height: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 999px;
+}
+::-webkit-scrollbar-thumb:hover {
+  height: 10px;
+  background: #555;
+}
 body{
   background-color: #1b1d20;
   color: silver;
@@ -291,7 +312,7 @@ nav ul li p{
   flex-wrap: wrap;
 }
 .posts{
-  width: 320px;
+  width: 33%;
   height: 120px;
   border: 1px solid red;
 }
