--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,6 @@
 }
 body{
   background-color: #1b1d20;
-  color: silver;
 }
 #loginContainer{
   position: absolute;
@@ -37,7 +36,7 @@ body{
   transform: translate(-50%,-50%);
   width: 350px;
   /* height:520px; */
-  padding: 10px 20px;
+  padding: 25px 20px;
   border: 1px solid rgb(219, 219, 219);
   display: flex;
   flex-direction: column;
@@ -46,7 +45,7 @@ body{
 }
 #loginLogo{
   width: 50%;
-  margin-top: 20px;
+  /* margin-top: 20px; */
   margin-bottom: 20px;
 }
 .inputField{
@@ -58,6 +57,7 @@ body{
   outline: none;
   font-size: 13px;
   border-radius: 3px;
+  color: black;
 }
 .sbtn{
   border: 1px solid #4bb4f8;
