--- a/src/App.css
+++ b/src/App.css
@@ -142,6 +142,7 @@ nav ul li p{
   background-color: transparent;
   border-radius: 6px;
   display: flex;
+  flex-direction: column;
   top: 0;
   left: 370px;
 }
@@ -397,6 +398,15 @@ textarea{
   background-color: #d4edda;
   border: 1px solid #c3e6cb;
   color: #155724;
+}
+.userSearchContainer{
+  width: 100%;
+  background-color: #1b1d20;
+  padding: 5px;
+  cursor: pointer;
+}
+.userSearchContainer:hover{
+  border: 1px solid rgb(182, 180, 180);
 }
 @media only screen and (max-width:1920px) {
   nav{
