--- a/src/App.css
+++ b/src/App.css
@@ -251,9 +251,10 @@ nav ul li p{
 .userProfile{
   min-width:  35px;
   min-height: 35px;
+  max-width:  35px;
+  max-height: 35px;
   border-radius: 999px;
   margin-right: 10px;
-  border: 1px solid blue;
 }
 #msgBody{
   width: 100%;
@@ -293,7 +294,6 @@ nav ul li p{
   height: 150px;
   border-radius: 999px;
   margin-right: 25px;
-  border: 1px solid red;
 }
 #profileControls{
   display: flex;
@@ -315,7 +315,7 @@ nav ul li p{
   flex-wrap: wrap;
 }
 .posts{
-  width: 33%;
+  min-width: 33%;
   height: 120px;
   border: 1px solid red;
 }
